--- a/src/css/common.css
+++ b/src/css/common.css
@@ -24,8 +24,14 @@ button {
 }
 .js3-item {
   margin-right: 10px;
+  max-width: 200px;
 }
-.js3-gallery img {
-  max-width: 10px;
-  height: auto;
+.js3-gallery {
+  display: flex;
+  list-style: none;
+  flex-direction: column;
+  align-items: center;
+}
+.js3-img {
+  width: 100%;
 }
